--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "firebase": "^11.3.1",
+    "framer-motion": "^12.4.7",
     "react": "^19.0.0",
+    "react-confetti": "^6.2.3",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0"
   },
